# f1-ps-telemetry

./: .bumpversion.cfg  .flake8  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish-to-test-pypi.yml
examples/: example.py
f1_ps_telemetry/: packed_little_endian.py  packets.py  unpack_udp.py
src/f1_ps_telemetry/: packets.py  packets_23.py  unpack_udp.py
